cmake_minimum_required(VERSION 3.27)
project(IntoC C)

set(CMAKE_C_STANDARD 99)

add_executable(IntoC main.c
        practice_6.c
        ch_6_2.c
        example_1_1.c
        example_1_2.c
        example_3_2.c
        example_2_1.c
        example_2_2.c
        example_2_3.c
        example_2_3.h
)
